--- a/app/src/main/res/layout/fragment_movie_grid.xml
+++ b/app/src/main/res/layout/fragment_movie_grid.xml
@@ -8,6 +8,8 @@
         android:id="@+id/movie_gridview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="auto_fit"></GridView>
+        android:numColumns="auto_fit"
+        android:stretchMode="columnWidth"
+        android:gravity="center"></GridView>
 
 </FrameLayout>
