--- a/app/src/main/res/layout/thumbnail_grid_item.xml
+++ b/app/src/main/res/layout/thumbnail_grid_item.xml
@@ -4,5 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/grid_item_thumbnail_imageview"
-    android:scaleType="centerCrop"
+    android:scaleType="fitCenter"
+    android:adjustViewBounds="true"
     />
