Feature: displaying reviews, it works great
DetailedMovieFragment: added second Loader, this time expanding list items in a LinearLayout
added 2 list item templates, one for reviews, one when no reviews
added a few strings for title and no review message

--- a/app/src/main/res/layout/fragment_detailed_movie.xml
+++ b/app/src/main/res/layout/fragment_detailed_movie.xml
@@ -65,6 +65,24 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_vertical_margin"/>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@android:color/darker_gray"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/review_section_title"
+            android:textAllCaps="true"/>
+
+        <LinearLayout
+            android:id="@+id/review_listview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+        </LinearLayout>
+
     </LinearLayout>
 
 </ScrollView>
