--- a/app/src/main/res/layout/fragment_detailed_movie.xml
+++ b/app/src/main/res/layout/fragment_detailed_movie.xml
@@ -73,6 +73,24 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/trailers_section_title"
+            android:textAllCaps="true"/>
+
+        <LinearLayout
+            android:id="@+id/trailers_listview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@android:color/darker_gray"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/review_section_title"
             android:textAllCaps="true"/>
 
