Feature: can now load more than 1 page of movies on main grid
Added icon
Added GridView with footer library
Created loading system by restarting loader taking page number into account
Check in ItemClickListener if click came from movie poster or header

--- a/app/src/main/res/layout/fragment_movie_grid.xml
+++ b/app/src/main/res/layout/fragment_movie_grid.xml
@@ -4,12 +4,12 @@
     android:layout_height="match_parent"
     tools:context="com.example.android.bestmovies.MovieGridFragment">
 
-    <GridView
+    <in.srain.cube.views.GridViewWithHeaderAndFooter
         android:id="@+id/movie_gridview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:numColumns="auto_fit"
         android:stretchMode="columnWidth"
-        android:gravity="center"></GridView>
+        android:gravity="center"/>
 
 </FrameLayout>
